--- a/app/globals.css
+++ b/app/globals.css
@@ -435,3 +435,62 @@
 .header{
   position: fixed;
 }
+.profile{
+  padding-top: 440px;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 300px;
+}
+.profileframe{
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+.GIGIBERIDZE{
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.profilename{
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-align: start;
+  display: flex;
+
+  justify-content: start;
+}
+.profiledesc{
+  margin-top: 20px;
+  max-width: 450px;
+  text-align: start;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+  display: flex;
+
+  justify-content: start;
+}
+.profilebtns button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+}
+.profilecontact{
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  color: black;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+.weblevel{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
